--- a/config/_default/languages.yaml
+++ b/config/_default/languages.yaml
@@ -1,3 +1,4 @@
+
 # Languages
 #   Create a section for each of your site's languages.
 #   Documentation: https://docs.hugoblox.com/reference/language/
@@ -5,18 +6,12 @@
 # Default language
 en:
   languageCode: en-us
-  # Uncomment for multi-lingual sites, and move English content into `en` sub-folder.
-  #contentDir: content/en
+  contentDir: content/en
 
-# Uncomment the lines below to configure your website in a second language.
-#zh:
-#  languageCode: zh-Hans
-#  contentDir: content/zh
-#  title: Chinese website title...
-#  params:
-#    description: Site description in Chinese...
-#  menu:
-#    main:
-#      - name: 传
-#        url: '#about'
-#        weight: 1
+# Additional language
+es:
+  languageCode: es-es
+  contentDir: content/es
+  title: Spanish Site Title
+  params:
+    description: Sitio web en español.
