--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -4,8 +4,8 @@
   #   The weight parameter defines the order that the links will appear in.
 
 main:
-  - name: Bio
-    url: /
+  - name: Home
+    url: /home
     weight: 10
   - name: Experience
     url: experience/
