--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -6,7 +6,7 @@
 # Website name
 title: Hugo Academic CV Theme
 # Website URL
-baseURL: 'https://example.com/'
+baseURL: 'https://soulini.github.io/SpaceMed_Strona_CV/'
 
 ############################
 ## LANGUAGE
